# swift-models

./: Package.swift
Datasets/: CMakeLists.txt  DatasetUtilities.swift
Datasets/EMSegmentation/: EMSegmentation.swift
Examples/: CMakeLists.txt
Examples/UNet-EMSegmentation/: CMakeLists.txt  main.swift
Models/SegmentationModels/: CMakeLists.txt  UNet.swift
Tests/: LinuxMain.swift
Tests/DatasetsTests/EMSegmentation/: EMSegmentationTests.swift
Tests/SegmentationModelsTests/: UNetTest.swift  XCTestManifests.swift
